# CHOP_metadata_checker

./: .gitignore  AGENTS.md  Dockerfile  Dockerfile.full  Dockerfile.lite  README.md  SAMPLE.env  create_project.sh  deploy_dev.sh  deployment.yaml  ingress.yaml  persistent-volume-claim.yaml  pyproject.toml  requirements.txt  schema.sql  service.yaml  test_metadata_sheet.csv  wiki.Rmd  zappa_settings.json
.github/workflows/: main.yaml  release.yml  test.yml
Flask/: .app.py.swp  app.py
Flask/db/: db.py
Flask/tablemusthave/: table.py
Flask/templates/: base.html  dne.html  final.html  index.html  wiki.html
admin_site/Flask/: app.py
admin_site/Flask/csv_writer/: writer.py
admin_site/Flask/db/: db.py
admin_site/Flask/templates/: base.html  download.html  index.html
admin_site/Flask/tests/: test_db.py
app/: __init__.py  app.py
app/db/: db.py
app/metadatalib/: README.md  pyproject.toml
app/metadatalib/src/: db.py  log.py  pages.py
app/metadatalib/src/metadatalib/: __init__.py  command.py  consts.py  createProject.py  db.py  models.py  musthave.py  pages.py  spec.py  table.py  utils.py
app/metadatalib/tests/: test_command.py  test_db.py  test_musthave.py  test_spec.py  test_utils.py
app/src/: __init__.py  utils.py  views.py
app/templates/: base.html  dne.html  final.html  index.html  macros.jinja  project.html  ready.html  submission.html  submit.html  summary.html  wiki.html
app/tests/: test_db.py
metadata_checker_site/Flask/: app.py
metadata_checker_site/Flask/tablemusthave/: table.py
metadata_checker_site/Flask/templates/: index.html
metadata_checker_site/Flask/tests/: test_db.py
metadatacli/: setup.py
metadatacli/metadatacli.egg-info/: PKG-INFO
metadatacli/src/metadatacli/: command.py  createProject.py  db.py
metadatacli/src/metadatacli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
metadatacli/tests/: test_db.py
metadatalib/: __init__.py  app.py  command.py  config.py  consts.py  db.py  db_connection.py  models.py  spec.py  table.py  table_flask.py  utils.py
metadatalib/templates/: base.html  dne.html  final.html  index.html  lite.html  macros.jinja  project.html  submission.html  submit.html  upload.html  wiki.html
tests/: test_command.py  test_db.py  test_musthave.py  test_spec.py  test_utils.py
