[project]
name = "metadatalib"
dynamic = ["version"]
description = "Utils and CLI for CHOP Metadata Checker service"
readme = "README.md"
requires-python = ">=3.7"
authors = [
  {name = "Charlie Bushman", email = "ctbushman@gmail.com"}
]
maintainers = [
  {name = "Charlie Bushman", email = "ctbushman@gmail.com"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.optional-dependencies]
dev = ["black"]
test = ["pytest", "pytest-cov"]
web = [
  "flask",
  "flask-sqlalchemy",
  "flask-session",
  "sqlalchemy",
  "psycopg2-binary",
  "tablemusthave @ git+https://github.com/kylebittinger/tablemusthave.git"
]

[project.urls]
Homepage = "https://metadatachecker.tkg.research.chop.edu"
"Bug Reports" = "https://github.research.chop.edu/MicrobiomeCenter/CHOP_metadata_checker/issues"
Source = "https://github.research.chop.edu/MicrobiomeCenter/CHOP_metadata_checker"

[project.scripts]
metadatacli = "metadatalib.command:main"
create_metadata_test_db = "metadatalib.db:create_test_db"

[tool.setuptools.package-data]
metadatalib = ["static/*", "templates/*"]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "metadatalib.__version__"}
