[project]
name = "metadatalib"
dynamic = ["version"]
description = "Utils, DB, and interface for CHOP Metadata Checker service"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Charlie Bushman", email = "ctbushman@gmail.com"}
]
maintainers = [
  {name = "Charlie Bushman", email = "ctbushman@gmail.com"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "sqlalchemy~=2.0",
  "tablemusthave @ git+https://github.com/kylebittinger/tablemusthave.git",
]

[project.optional-dependencies]
dev = [
  "black~=25.1",
  "pytest~=8.4",
  "pytest-cov~=7.0",
]
web = [
  "flask~=3.1",
  "flask-sqlalchemy~=3.1",
  "flask-session~=0.8",
]

[project.urls]
Homepage = "https://metadatachecker.tkg.research.chop.edu"
"Bug Reports" = "https://github.research.chop.edu/MicrobiomeCenter/CHOP_metadata_checker/issues"
Source = "https://github.research.chop.edu/MicrobiomeCenter/CHOP_metadata_checker"

[project.scripts]
metadatacli = "metadatalib.command:main"
create_metadata_test_db = "metadatalib.db:create_test_db"

[tool.setuptools]
packages = ["metadatalib"]

[tool.setuptools.package-data]
metadatalib = ["static/*", "templates/*"]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "metadatalib.__version__"}
