[project]
name = "metadatalib"  # Required
dynamic = ["version"]
description = "Utils and CLI for CHOP Metadata Checker service"  # Optional
readme = "README.md" # Optional
requires-python = ">=3.7"
#license = {file = "LICENSE.txt"}
#keywords = ["sample", "setuptools", "development"]  # Optional
authors = [
  {name = "Charlie Bushman", email = "ctbushman@gmail.com" } # Optional
]
maintainers = [
  {name = "Charlie Bushman", email = "ctbushman@gmail.com" } # Optional
]
classifiers = [  # Optional
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [ # Optional
# Gonna leave this blank for the time being, defer to the requirements.txt in CHOP_metadata_checker
]

[project.optional-dependencies] # Optional
dev = ["black"]
test = ["pytest", "pytest-cov"]

[project.urls]  # Optional
"Homepage" = "https://metadatachecker.tkg.research.chop.edu"
"Bug Reports" = "https://github.research.chop.edu/MicrobiomeCenter/CHOP_metadata_checker/issues"
#"Funding" = "https://donate.pypi.org"
#"Say Thanks!" = "http://saythanks.io/to/example"
"Source" = "https://github.research.chop.edu/MicrobiomeCenter/CHOP_metadata_checker"

[project.scripts]  # Optional
metadatacli = "metadatalib.command:main"
create_metadata_test_db = "metadatalib.db:create_test_db"

[tool.setuptools]
#package-data = {"sample" = ["*.dat"]}

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]